<resources>
    <string name="app_name">Heistr</string>
    <string name="action_settings">Settings</string>
    <string name="sad_face">:(</string>
    <string name="empty_build_list">No builds yet.</string>
    <string name="title_activity_edit_build">Heistr</string>
    <string name="title_activity_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="hello_blank_fragment">Coming Soon!</string>
    <string name="default_string">Loading..</string>
    <string name="menu_build_list_title">Build Selected</string>
    <string name="action_delete">Delete</string>
    <string name="untitled_build">Untitled Build</string>
    <string name="mastermind_shorthand">Mas</string>
    <string name="enforcer_shorthand">Enf</string>
    <string name="technician_shorthand">Tech</string>
    <string name="ghost_shorthand">Gho</string>
    <string name="fugitive_shorthand">Fug</string>
    <string name="mastermind">Mastermind</string>
    <string name="enforcer">Enforcer</string>
    <string name="technician">Technician</string>
    <string name="ghost">Ghost</string>
    <string name="fugitive">Fugitive</string>
    <string-array name="attachment_types">
        <item>Ammo</item>
        <item>Barrel</item>
        <item>Barrel Extension</item>
        <item>Bayonet</item>
        <item>Custom</item>
        <item>Extra</item>
        <item>Foregrip</item>
        <item>Gadget</item>
        <item>Grip</item>
        <item>Lower Receiver</item>
        <item>Magazine</item>
        <item>Sight</item>
        <item>Slide</item>
        <item>Stock</item>
        <item>Suppressor</item>
        <item>Upper Receiver</item>
        <item>Stat Boost</item>
    </string-array>
    <string name="weapon_attribute_magazine_shorthand">Mag</string>
    <string name="weapon_attribute_ammo_shorthand">Amm</string>
    <string name="weapon_attribute_rof_shorthand">RoF</string>
    <string name="weapon_attribute_damage_shorthand">Dam</string>
    <string name="weapon_attribute_accuracy_shorthand">Acc</string>
    <string name="weapon_attribute_stability_shorthand">Stab</string>
    <string name="weapon_attribute_concealment_shorthand">Con</string>
    <string name="weapon_attribute_magazine">Magazine Size</string>
    <string name="weapon_attribute_ammo">Total Ammo</string>
    <string name="weapon_attribute_rof">Rate of Fire</string>
    <string name="weapon_attribute_damage">Damage</string>
    <string name="weapon_attribute_accuracy">Accuracy</string>
    <string name="weapon_attribute_stability">Stability</string>
    <string name="weapon_attribute_concealment">Concealment</string>
    <string name="message_new_build">Enter a name for this new build.</string>
    <string name="armour_default">Suit</string>
    <string name="perk_deck_default">Crew Chief</string>
    <string name="detectionShort">Det</string>
    <string name="got_it">Got it!</string>
    <string name="hint_huild_name">Build Name</string>
    <string name="hint_rename">New Name</string>
    <string name="hint_url">PD2Skills URL</string>
    <string name="cb_infamies">Auto select infamies</string>
    <string name="big_oil">Big Oil</string>
    <string name="action_URL">PD2Skills URL</string>
    <string name="new_build_or">or</string>
    <string name="new_build_with">with</string>
    <string name="action_rename">Rename</string>
    <string name="cancel">Cancel</string>
    <string name="default20">20.0</string>
    <string name="default0">0</string>
    <string name="attribute">Attribute</string>
    <string name="base">Base</string>
    <string name="mod">Mod</string>
    <string name="skill">Skill</string>
    <string name="empty_weapon_list">No weapons yet.</string>
    <string name="totsl">Total</string>
    <string name="action_make_current">Make current</string>
    <string name="hint_weapon_name">Weapon Name</string>
    <string name="create">Create</string>
    <string name="new_weapon_template">as a template</string>
    <string name="new_weapon_is">is a</string>
    <string name="new_weapon_using">using</string>
    <string name="skill_trees">Skill Trees</string>
    <string-array name="mastermind_sub_trees">
        <item>Medic</item>
        <item>Controller</item>
        <item>Sharpshooter</item>
    </string-array>
    <string-array name="enforcer_sub_trees">
        <item>Shotgunner</item>
        <item>Armorer</item>
        <item>Ammunition Specialist</item>
    </string-array>
    <string-array name="technician_sub_trees">
        <item>Engineer</item>
        <item>Breacher</item>
        <item>Oppressor</item>
    </string-array>
    <string-array name="ghost_sub_trees">
        <item>Covert Ops</item>
        <item>Commando</item>
        <item>Silent Killer</item>
    </string-array>
    <string-array name="fugitive_sub_trees">
        <item>Gunslinger</item>
        <item>Relentless</item>
        <item>Brawler</item>
    </string-array>
    <string-array name="infamies">
        <item>Mastermind</item>
        <item>Enforcer</item>
        <item>Technician</item>
        <item>Ghost</item>
    </string-array>
    <string-array name="infamyDesc">
        <item>Set of the Corrupted</item>
        <item>The Slaughterhouse Set</item>
        <item>Set of the Ingenious</item>
        <item>The Assassin Set</item>
    </string-array>
    <string-array name="perkDecks">
        <item>Crew Chief</item>
        <item>Muscle</item>
        <item>Armourer</item>
        <item>Rogue</item>
        <item>Hitman</item>
        <item>Crook</item>
        <item>Burglar</item>
        <item>Infiltrator</item>
        <item>Sociopath</item>
        <item>Gambler</item>
        <item>Grinder</item>
        <item>Yakuza</item>
        <item>Ex&#8211;Presidents</item>
        <item>Maniac</item>
        <item>Anarchist</item>
        <item>Biker</item>
        <item>Kingpin</item>
    </string-array>
    <string name="armour">Armour</string>
    <string-array name="armourShortened">
        <item>Suit</item>
        <item>LBV</item>
        <item>BV</item>
        <item>HBV</item>
        <item>FJ</item>
        <item>CTV</item>
        <item>ICTV</item>
    </string-array>
    <string-array name="armourURLNumbers">
        <item>1</item>
        <item>3</item>
        <item>2</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>
    <string-array name="armourDetails">
        <item>Armor: 20\nHealth: 230\nConcealment: 30\nSpeed: 36.8\nDodge: 5\nSteadiness: 11\nStamina: 51.3</item>
        <item>Armor: 50\nHealth: 230\nConcealment: 26\nSpeed: 35.9\nDodge: -5\nSteadiness: 11.5\nStamina: 50</item>
        <item>Armor: 60\nHealth: 230\nConcealment: 23\nSpeed: 35\nDodge: -10\nSteadiness: 12\nStamina: 47.5</item>
        <item>Armor: 70\nHealth: 230\nConcealment: 21\nSpeed: 33.3\nDodge: -15\nSteadiness: 12.9\nStamina: 45</item>
        <item>Armor: 90\nHealth: 230\nConcealment: 18\nSpeed: 26.3\nDodge: -20\nSteadiness: 13.8\nStamina: 42.5</item>
        <item>Armor: 110\nHealth: 230\nConcealment: 12\nSpeed: 22.8\nDodge: -25\nSteadiness: 15.7\nStamina: 40</item>
        <item>Armor: 170\nHealth: 230\nConcealment: 1\nSpeed: 20.1\nDodge: -55\nSteadiness: 22\nStamina: 35</item>
    </string-array>
    <string-array name="perkDecksURL">
        <item>c</item>
        <item>m</item>
        <item>a</item>
        <item>r</item>
        <item>h</item>
        <item>o</item>
        <item>b</item>
        <item>i</item>
        <item>s</item>
        <item>g</item>
        <item>n</item>
        <item>y</item>
        <item>e</item>
        <item>d</item>
        <item>h</item>
        <item>k</item>
        <item>p</item>
    </string-array>
    <string name="build_list">Build List</string>
    <string name="action_about">About</string>
    <string name="header_navigation">Navigation</string>
    <string name="infamy">Infamy</string>
    <string name="perk_deck">Perk Deck</string>
    <string name="pref_skill_name_length">Skill name character limit</string>
    <string name="pref_skill_name_length_summ">Max characters of a skill\'s name to display</string>
    <string name="pref_weapon_name_length">Weapon name character limit</string>
    <string name="pref_skill_weapon_name_length_summ">Max characters of a weapon\'s name to display</string>
    <string name="pref_weapon_nickname_length">Weapon nickname character limit</string>
    <string name="pref_skill_weapon_nickname_length_summ">Max characters of a weapon\'s nickname to display</string>
    <string name="pref_build_name_length">Build name character limit</string>
    <string name="pref_build_name_length_summ">Max characters of a build\'s name to display</string>
    <string name="big_oil_nozzles_unknown">Nozzles Unknown</string>
    <string name="big_oil_nozzles_1">1 x H (1 nozzle)</string>
    <string name="big_oil_nozzles_2">2 x H (2 nozzles)</string>
    <string name="big_oil_nozzles_3">3 x H (3 nozzles)</string>
    <string name="big_oil_element_unknown">Element Unknown</string>
    <string name="big_oil_element_nitrogen">Nitrogen (Titanium)</string>
    <string name="big_oil_element_deuterium">Deuterium (Palladium)</string>
    <string name="big_oil_element_helium">Helium (Platinum)</string>
    <string name="big_oil_pressure_unknown">Pressure Unknown</string>
    <string name="big_oil_pressure_greater_than"><![CDATA[> 5783]]></string>
    <string name="big_oil_pressure_less_than"><![CDATA[< 5783]]></string>
    <string name="big_oil_doors">Doors</string>
    <string name="big_oil_engine_12">12</string>
    <string name="big_oil_engine_7">7</string>
    <string name="big_oil_stairs">Stairs</string>
    <string name="big_oil_engine_2">2</string>
    <string name="big_oil_engine_1">1</string>
    <string name="big_oil_engine_4">4</string>
    <string name="big_oil_engine_3">3</string>
    <string name="big_oil_engine_6">6</string>
    <string name="big_oil_engine_5">5</string>
    <string name="big_oil_engine_9">9</string>
    <string name="big_oil_engine_8">8</string>
    <string name="big_oil_engine_11">11</string>
    <string name="big_oil_engine_10">10</string>
    <string name="current_weapon">Weapon</string>
    <string name="current_attachment">Current</string>
    <string name="new_attachment">This</string>
    <string name="weapons">Weapons</string>
</resources>