<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_mastermind"
                android:title="@string/mastermind" />
        <item
                android:id="@+id/nav_enforcer"
                android:title="@string/enforcer" />
        <item
                android:id="@+id/nav_technician"
                android:title="@string/technician" />
        <item
                android:id="@+id/nav_ghost"
                android:title="@string/ghost" />
        <item
                android:id="@+id/nav_fugitive"
                android:title="@string/fugitive" />
        <item
                android:id="@+id/nav_infamy"
                android:title="@string/infamy" />
        <item
                android:id="@+id/nav_perk_deck"
                android:title="@string/perk_deck" />
        <item
                android:id="@+id/nav_armour"
                android:title="@string/armour" />
        <item
                android:id="@+id/nav_weapons"
                android:title="@string/weapons" />
    </group>

    <item android:title="@string/header_navigation">
        <menu>
            <item
                    android:id="@+id/nav_home"
                    android:icon="@drawable/ic_home_24dp"
                    android:title="@string/build_list" />
            <item
                    android:icon="@drawable/ic_info_white_24dp"
                    android:title="@string/action_about" />
            <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/ic_settings_24dp"
                    android:title="@string/action_settings" />
        </menu>
    </item>

</menu>